--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document 1</title>
 </head>
 <body>
     <p>1</p>
@@ -16,5 +16,8 @@
     <p>8</p>
     <p>9</p>
     <p>10</p>
+    <div>
+        <form action="" method="get"></form>
+    </div>
 </body>
 </html>
